--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,14 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <style>
-      @import url(//db.onlinewebfonts.com/c/860c3ec7bbc5da3e97233ccecafe512e?family=Circular+Std+Book);
+      @font-face {font-family: "Circular Std Book";
+        src: url("<%= BASE_URL %>fonts/860c3ec7bbc5da3e97233ccecafe512e.eot"); /* IE9*/
+        src: url("<%= BASE_URL %>fonts/860c3ec7bbc5da3e97233ccecafe512e.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+        url("<%= BASE_URL %>fonts/860c3ec7bbc5da3e97233ccecafe512e.woff2") format("woff2"), /* chrome、firefox */
+        url("<%= BASE_URL %>fonts/860c3ec7bbc5da3e97233ccecafe512e.woff") format("woff"), /* chrome、firefox */
+        url("<%= BASE_URL %>fonts/860c3ec7bbc5da3e97233ccecafe512e.ttf") format("truetype"), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+        url("<%= BASE_URL %>fonts/860c3ec7bbc5da3e97233ccecafe512e.svg#Circular Std Book") format("svg"); /* iOS 4.1- */
+      }
       html{
           background: #f3f4f6;
       }
